<resources>
    <string name="app_name">Gym Application</string>
    <string name="loginTxt">Do you have an account? <font color="#FD511E">SignUp</font></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="get_started">Get Started</string>
    <string name="push_yourself_nto_the_limit">PUSH YOURSELF\nTO THE LIMIT</string>
    <string name="liluksha_rs">Liluksha RS</string>
    <string name="welcome_to_nfitlifebudddy">Welcome to \nFit Life Budddy</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="onboardingScreen1Title">Workouts Tailored\n Just for You</string>
    <string name="onboardingScreen1Description">Whether your goal is to maintain a healthy lifestyle, gain muscle, or reduce weight, get personalised fitness plans that meet your objectives.</string>
    <string name="nextBtn1">Next</string>
    <string name="onboardingScreen2Description">Track your workouts, monitor your progress, and see how far you\'ve come with detailed charts and statistics. Celebrate every milestone!</string>
    <string name="onboardingScreen2Title">Monitor Your Fitness Journey</string>
    <string name="nextBtn2">Next</string>
    <string name="onboardingScreen3Title">Set and Achieve\nYour Goals</string>
    <string name="onboardingScreen3Description">Set fitness goals, track your progress, and stay motivated with personalized reminders and rewards. Your success is our mission.</string>
    <string name="log_in">Log In</string>
    <string name="usernameLogin">Username</string>
    <string name="passwordLogin">Password</string>
    <string name="forgot_your_password">Forgot your password? \n\n or</string>
    <string name="loginBtn">Login</string>
    <string name="create_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="loginBtnCreateAcc">Signup</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="welcome_back">Welcome back</string>
    <string name="search_workout">Search Workout...</string>
    <string name="daily_monitoring">Daily Monitoring</string>
    <string name="_2500">2500</string>
    <string name="daily_calouries">Daily Calouries</string>
    <string name="_7h_15min">7h 15min</string>
    <string name="sleep_time">Sleep Time</string>
    <string name="_3w_5days">3w 5days</string>
    <string name="total_workout">Total Workout</string>
    <string name="twist_nexcercise">Twist\nExcercise</string>
    <string name="_15min_beginner">15min - Beginner</string>
    <string name="other_workouts">Other workouts</string>
    <string name="see_all">See all</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="_20_min">20 min</string>
    <string name="exercise">Exercise</string>
    <string name="_160_kcal">160 Kcal</string>
    <string name="intermadiate">Intermadiate</string>
    <string name="stretching">Stretching</string>
    <string name="you_just_woke_up_it_is_a_brand_new_day_the_canvas_is_blank_how_do_you_begin_take_21_minutes_to_cultivate_a_peaceful_mind_and_strong_body">You just woke up. It is a brand new day. The canvas is blank. How do you begin? Take 21 minutes to cultivate a peaceful mind and strong body.</string>
    <string name="exercise_">Exercise</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="lesson_2">Lesson 2</string>
    <string name="lesson_3">Lesson 3</string>
    <string name="log_out">Log Out</string>
    <string name="personal_information">Personal Information:</string>
    <string name="pesonalDetails">Username: Roshan_24\nAge: 28\nGender: Male\n</string>
    <string name="body_measurements">Body Measurements:</string>
    <string name="bodyMeasurementsDetails">Height: 5\'11 (180 cm)\nWeight: 170 lbs (77 kg)Chest: 40 inches\nWaist: 32 inches\nHips: 38 inches\n</string>
    <string name="fitness_goals">Fitness Goals:</string>
    <string name="weightGoals">Current Weight: 170 lbs\nTarget Weight: 160 lbs\n</string>
    <string name="goals">Goals:</string>
    <string name="otherGoals">Strength Goal: Bench press 200 lbs\nEndurance Goal: Run a half marathon\nNutrition Goal: 2,500 calories per day,\n150g protein, 300g carbs, 70g fats</string>
    <string name="onbordingHeading">Workouts Tailored and Just for You</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="todoList">Workout List</string>
    <string name="running">Running</string>
</resources>